--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
    
 
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" %}">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static "css/sb-admin.css" %}">
