--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
-                       A port scanner built using python and scapy - By Jeffrey Niemann
+                       A TCP port scanner built using python and scapy - By Jeffrey Niemann
                     </li>
                 </ol>
                 
