--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,10 @@
                             <a href="/"></i>Home Page</a>
                         </li>
                         <li>
-                            <a href="new/"></i>New Scan</a>
+                            <a href="/new/"></i>New Scan</a>
                         </li>
                         <li>
-                            <a href="scans/"></i>Scans</a>
+                            <a href="/scans/"></i>Scans</a>
                         </li>
                                            
                     </ul>
